src/objects/Apttus_DealMgr__DealGuidanceDimension__c.object
<CustomObject>
    <description>Represents a single dimension in a dimension set</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__BusinessObject__c</fullName>
        <description>The business object which provides the context for the dimension</description>
        <inlineHelpText>The business object which provides the context for the dimension</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_DealMgr__Deal__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_DealMgr__DealLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__LineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Datasource__c</fullName>
        <description>The data source which provides the value for the dimension.</description>
        <inlineHelpText>The data source which provides the value for the dimension.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__Description__c</fullName>
        <description>The description for the dimension</description>
        <inlineHelpText>The description for the dimension</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DimensionType__c</fullName>
        <description>The dimension type</description>
        <inlineHelpText>The dimension type</inlineHelpText>
        <label>Dimension Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                    <default>true</default>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal Guidance Dimension</label>
    <listViews>
        <fullName>Apttus_DealMgr__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Guidance Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>